--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,46 @@
 [package]
 name = "ashina"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# Git deps
-dioxus = "*"
-dioxus-web = "*"
+dioxus = { version = "0.7.0-rc.0", features = ["web"] }
 
-reqwest = "0.11.22"
-wasm-bindgen = "0.2.89"
-web-sys = { version = "0.3.66", features = ["HtmlVideoElement", "Url", "MediaSource", "SourceBuffer", "TimeRanges"] }
-futures = "0.3.29"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+wasm-bindgen = "0.2.92"
+web-sys = { version = "0.3.70", features = ["HtmlVideoElement", "Url", "MediaSource", "SourceBuffer", "TimeRanges"] }
+futures = "0.3.31"
 tracing = "0.1.40"
 tracing-wasm = "0.2.1"
-bytes = "1.5.0"
-dash-mpd = { git = "https://github.com/vgarleanu/dash-mpd-rs", default-features = false }
-url = "2.5.0"
-flume = "0.11.0"
-js-sys = "0.3.66"
-tokio = { version = "1.34.0", features = ["rt", "time", "macros"] }
+bytes = "1.7"
+dash-mpd = { version = "0.18.4", default-features = false }
+url = "2.5.3"
+flume = "0.11.1"
+js-sys = "0.3.70"
 gloo-timers = { version = "0.3.0", features = ["futures"] }
-thiserror = "1.0.50"
-displaydoc = "0.2.4"
+thiserror = "1.0.63"
+displaydoc = "0.2.5"
 gloo-utils = "0.2.0"
-serde = { version = "1.0.193", features = ["derive"] }
+serde = { version = "1.0.207", features = ["derive"] }
 mp4 = { version = "0.14.0" }
 byteorder = "1.5.0"
-wasm-bindgen-futures = "0.4.39"
-regex = "1.10.2"
-lazy_static = "1.4.0"
+wasm-bindgen-futures = "0.4.43"
+regex = "1.11"
+lazy_static = "1.5"
+
+[profile]
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
+
+[target.wasm32-unknown-unknown.dependencies]
+tokio = { version = "1.40", default-features = false, features = ["sync","macros","rt","time"] }
